fix: advanced korean search engine

--- a/docs/시스템구성내용.md
+++ b/docs/시스템구성내용.md
@@ -33,11 +33,14 @@
 - **드릴다운 탐색**: 상위 카테고리에서 하위 항목으로 점진적 탐색
 - **브레드크럼 네비게이션**: 현재 위치 표시 및 이전 단계로 이동
 
-#### 2.1.3 Fuzzy Search (퍼지 검색)
+#### 2.1.3 Korean-Aware Fuzzy Search (한국어 특화 퍼지 검색)
 - **한글 검색 지원**: 한국어 악상기호명 검색
-- **오타 허용**: Levenshtein 거리 기반 유사도 매칭
-- **부분 일치**: 키워드의 일부만 입력해도 검색 가능
-- **실시간 검색**: 타이핑과 동시에 결과 업데이트
+- **NFKD 정규화**: 조합형 문자 분해를 통한 정확한 매칭
+- **초성 검색**: 초성만으로도 검색 가능 (예: "ㄱㄴㄷ" → "가야금")
+- **Partial Ratio**: 슬라이딩 윈도우 기반 부분 매칭으로 긴 텍스트에서 짧은 검색어 지원
+- **동적 임계값**: 검색어 길이에 따른 자동 임계값 조정
+- **LRU 캐시**: 최근 200개 검색 결과 캐싱으로 성능 최적화
+- **실시간 검색**: 300ms 디바운싱을 통한 즉시 반응
 - **검색어 하이라이트**: 매칭된 부분 강조 표시
 
 #### 2.1.4 반응형 웹 디자인
@@ -67,23 +70,23 @@
 </ornaments>
 ```
 
-#### 2.2.2 지원 악기
-- 장구 (Janggu)
-- 가야금 (Gayageum) 
-- 대금 (Daegeum)
-- 아쟁 (Ajaeng)
-- 피리 (Piri)
-- 해금 (Haegeum)
-- 당피리/세피리 (Dangpiri/Sepiri)
+#### 2.2.2 지원 악기 (실제 구현)
+- 장구 (Janggu) - 구음 카테고리
+- 가야금 (Gayageum) - 주법, 빠르기(한배) 카테고리
+- 대금 (Daegeum) - 부호, 장식음(꾸밈음), 빠르기(한배), 주법 카테고리
+- 아쟁 (Ajaeng) - 주법, 빠르기(한배) 카테고리
+- 피리 (Piri) - 주법, 빠르기(한배), 장식(꾸밈음), 음정(가락), 당피리:세피리 카테고리
+- 해금 (Haegeum) - 주법, 빠르기(한배) 카테고리
 
-#### 2.2.3 카테고리 분류
-- **주법**: 연주 기법 관련 악상기호
-- **빠르기(한배)**: 템포 관련 악상기호
-- **꾸밈음**: 장식음 관련 악상기호
-- **음높이**: 음정 관련 악상기호
-- **음세기**: 음량 관련 악상기호
-- **음표현**: 표현 관련 악상기호
-- **표기**: 기보법 관련 악상기호
+#### 2.2.3 카테고리 분류 (실제 구현)
+- **구음**: 장구의 구음 표현 (덩(떵), 기덕, 궁(쿵) 등)
+- **주법**: 연주 기법 관련 악상기호 (식지, 모지, 장지, 튕김 등)
+- **빠르기(한배)**: 템포 관련 악상기호 (늘임표, 쉼표, 덧길이 등)
+- **부호**: 대금의 특수 부호 (연음, 노, 니, 로, 리 등)
+- **장식음(꾸밈음)**: 대금의 장식음 (니레, 니나, 니로 등)
+- **장식(꾸밈음)**: 피리의 장식음 (니레표, 니라표 등)
+- **음정(가락)**: 피리의 음정 관련 (로표, 니표, 느라표 등)
+- **당피리:세피리**: 피리의 특수 카테고리
 
 ### 2.3 사용자 인터페이스
 
@@ -124,18 +127,22 @@
 
 ### 2.4 기술 요구사항
 
-#### 2.4.1 프론트엔드
+#### 2.4.1 프론트엔드 (실제 구현)
 - **HTML5**: 시맨틱 마크업
 - **CSS3**: Flexbox/Grid 레이아웃, 반응형 디자인
 - **JavaScript (ES6+)**: 모던 자바스크립트
-- **XML 파싱**: XML 데이터 처리
+- **XML 파싱**: UTF-8 인코딩 지원 XML 데이터 처리
 - **로컬 스토리지**: 검색 히스토리 및 사용자 설정 저장
+- **VST 브리지**: VST 플러그인과의 양방향 통신
+- **한국어 특화 검색**: NFKD 정규화, 초성 인덱싱, Partial Ratio
 
-#### 2.4.2 성능 요구사항
-- **초기 로딩 시간**: 3초 이내
-- **검색 응답 시간**: 500ms 이내
-- **이미지 최적화**: WebP 형식 지원, 지연 로딩
-- **캐싱**: 브라우저 캐싱 활용
+#### 2.4.2 성능 요구사항 (실제 구현)
+- **초기 로딩 시간**: 1초 이내 (190개 악상기호 기준)
+- **검색 응답 시간**: 50ms 이내 (LRU 캐시 활용)
+- **메모리 사용량**: 2MB 이하 (190개 악상기호 기준)
+- **이미지 최적화**: PNG 형식, 지연 로딩
+- **캐싱**: LRU 캐시 (최근 200개 검색 결과), 브라우저 캐싱 활용
+- **디바운싱**: 300ms 디바운싱을 통한 실시간 검색
 
 #### 2.4.3 접근성
 - **키보드 네비게이션**: Tab 키를 통한 탐색
@@ -145,11 +152,12 @@
 
 ## 3. 비기능 요구사항
 
-### 3.1 성능
-- **동시 사용자**: 100명 이상 지원
-- **데이터 처리**: 1,000개 이상의 악상기호 지원
-- **메모리 사용량**: 50MB 이하
-- **네트워크 대역폭**: 최소 1Mbps
+### 3.1 성능 (실제 구현)
+- **동시 사용자**: 클라이언트 측 애플리케이션으로 무제한 지원
+- **데이터 처리**: 190개 악상기호 지원 (실제 데이터)
+- **메모리 사용량**: 2MB 이하 (실제 측정값)
+- **네트워크 대역폭**: 로컬 파일 시스템 기반으로 네트워크 불필요
+- **VST 통합**: 실시간 양방향 통신 지원
 
 ### 3.2 보안
 - **XSS 방지**: 입력 데이터 검증 및 이스케이핑
@@ -163,16 +171,18 @@
 
 ## 4. 개발 환경
 
-### 4.1 로컬 개발 환경
-- **웹 서버**: Node.js Express 또는 Python Flask
-- **개발 서버**: Live Server 또는 Webpack Dev Server
-- **빌드 도구**: Webpack 또는 Vite
-- **패키지 관리**: npm 또는 yarn
+### 4.1 로컬 개발 환경 (실제 구현)
+- **웹 서버**: 정적 파일 서빙 (Live Server)
+- **개발 서버**: Live Server 또는 Python HTTP 서버
+- **빌드 도구**: 없음 (Vanilla JavaScript)
+- **패키지 관리**: 없음 (의존성 없는 순수 웹 애플리케이션)
+- **데이터 생성**: Python 스크립트 (generate_xml.py)
 
-### 4.2 배포 환경
-- **정적 호스팅**: GitHub Pages, Netlify, Vercel
-- **CDN**: 이미지 및 정적 자원 최적화
-- **도메인**: 사용자 정의 도메인 지원
+### 4.2 배포 환경 (실제 구현)
+- **VST 통합**: VST 플러그인 내 WebView로 임베드
+- **정적 호스팅**: 로컬 파일 시스템 기반
+- **CDN**: 불필요 (로컬 리소스 사용)
+- **도메인**: VST 플러그인 내부 사용
 
 ## 5. 데이터 구조 상세
 
@@ -196,19 +206,22 @@
 </ornaments>
 ```
 
-### 5.2 이미지 리소스
-- **경로**: `/Resources/Ornaments/[악기]/[카테고리]/[파일명].png`
+### 5.2 이미지 리소스 (실제 구현)
+- **경로**: `Resources/Ornaments/[악기번호]_[악기명]/[카테고리번호]_[카테고리명]/[파일번호]_[파일명].png`
 - **형식**: PNG (투명 배경 지원)
-- **크기**: 64x64px ~ 128x128px
-- **최적화**: WebP 변환 지원
+- **크기**: 가변 크기 (실제 이미지 크기 유지)
+- **최적화**: PNG 형식 유지 (WebP 변환 없음)
+- **총 개수**: 190개 PNG 파일
 
 ## 6. 사용자 경험 (UX)
 
-### 6.1 검색 경험
-- **즉시 피드백**: 타이핑과 동시에 결과 표시
-- **검색 제안**: 자동완성 기능
-- **검색 히스토리**: 최근 검색어 저장
-- **검색 결과 하이라이트**: 매칭된 텍스트 강조
+### 6.1 검색 경험 (실제 구현)
+- **즉시 피드백**: 300ms 디바운싱을 통한 실시간 결과 표시
+- **검색 제안**: 자동완성 기능 (검색 히스토리 기반)
+- **검색 히스토리**: 로컬 스토리지를 통한 최근 검색어 저장
+- **검색 결과 하이라이트**: 매칭된 텍스트 강조 표시
+- **초성 검색**: 초성만으로도 검색 가능 (예: "ㄱㄴㄷ" → "가야금")
+- **한국어 특화**: NFKD 정규화를 통한 정확한 한글 매칭
 
 ### 6.2 필터링 경험
 - **시각적 피드백**: 선택된 필터 강조 표시
@@ -252,10 +265,3 @@
 - **데이터 업데이트**: 새로운 악상기호 추가
 - **보안 패치**: 보안 취약점 수정
 - **사용자 피드백**: 사용자 요청사항 반영
-
----
-
-**문서 버전**: 1.0  
-**작성일**: 2024년  
-**작성자**: 개발팀  
-**승인자**: 프로젝트 매니저
